# oo

./: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  cliff.toml  config.example.toml  release-plz.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-plz.yml  release.yml
docs/: README.md  architecture.md  cli-reference.md  configuration.md  learn.md  patterns.md  security-model.md  testing.md
examples/: basic.rs  custom_pattern.rs
src/: classify.rs  commands.rs  commands_tests.rs  error.rs  exec.rs  help.rs  init.rs  learn.rs  learn_prompt_tests.rs  learn_retry.rs  learn_retry_tests.rs  learn_tests.rs  learn_validate_tests.rs  lib.rs  main.rs  pattern.rs  session.rs  store.rs  store_tests.rs  util.rs
src/pattern/: builtins.rs  mod.rs  toml.rs
tests/: integration.rs
tests/fixtures/: anthropic_invalid.json  anthropic_success.json  openai_success.json
